--- a/views/register.html
+++ b/views/register.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/lib/login.css">
     <link rel="stylesheet" type="text/css" href="/static/css/blogsheet.css">
     <script src="/static/js/lib/jquery-3.3.1.min.js"></script>
-    <script src="/static/js/lib/jquery-url.min.js"></script>
+    <script src="/static/js/lib/jquery.url.js"></script>
     <script src="/static/js/blog.js"></script>
 </head>
 <body>
