--- a/views/login.html
+++ b/views/login.html
@@ -2,40 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>注册</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/lib/login.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/blogsheet.css">
-    <script src="/static/js/lib/jquery-3.3.1.min.js"></script>
-    <script src="/static/js/lib/jquery.url.js"></script>
-    <script src="/static/js/blog.js"></script>
+    <title>登录</title>
+    <link rel="stylesheet" type="text/css" href="../static/css/lib/login.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/blogsheet.css">
+    <script src="../static/js/lib/jquery-3.3.1.min.js"></script>
+    <script src="../static/js/lib/jquery.url.js"></script>
+    <script src="../static/js/blog.js"></script>
 </head>
 <body>
-
 <!--<div id="nav">-->
 <!--    <div id="nav-login">-->
 <!--        <ul>-->
 <!--            <li><a href="/login">登录</a></li>-->
 <!--            <li><a href="/register">注册</a></li>-->
 <!--        </ul>-->
+
 <!--    </div>-->
+
 <!--</div>-->
 {{template "nav.html"}}
-
 <div class="htmleaf-container">
     <div class="wrapper">
-<!--        注册表单-->
+        {{/*注册表单*/}}
         <div class="container">
             <h1>Welcome</h1>
-            <form id="register-form" class="form">
-                <input type="text" name="username" placeholder="UserName">
-                <input type="password" name="password" placeholder="Password" id="register-password">
-                <input type="password" name="repassword" placeholder="rePassword">
+            <form id="login-form" class="form">
+                <input type="text" name="username" placeholder="请输入用户名">
+                <input type="password" name="password" laceholder="请输入密码">
                 <br>
-                <button type="submit" id="login-button">Register</button>
+                <button type="submit" id="login-button">登录</button>
             </form>
         </div>
 
-<!--        背景动画-->
+        {{/*背景动画*/}}
         <ul class="bg-bubbles">
             <li></li>
             <li></li>
@@ -47,8 +46,11 @@
             <li></li>
             <li></li>
             <li></li>
+
         </ul>
+
     </div>
+
 </div>
 
 </body>
